(lang dune 3.15)

(name emulator)

(generate_opam_files true)

(source
 (github narcisseuuh/emulator))

(authors "Narcisse")

(maintainers "Narcisse")

(documentation https://github.com/narcisseuuh/Emulator)

(package
 (name emulator)
 (synopsis "An OCaml emulator for a short instruction set I created")
 (description "Check README")
 (depends ocaml dune))

